# genome-browser

./: README.md  pyproject.toml  setup.py
genome_browser/: __init__.py  _gene_features.py  _gene_locus.py  _genome_diagram.py  _tracks.py  _units.py  _util.py
scripts/: __init__.py  demo.py  new_api_demo_prototype.py
